<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.RegisterEnderecoActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <calendall.com.br.calendallpro.mask.EditTextCPF
            android:id="@+id/cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cpf"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1">

        <calendall.com.br.calendallpro.mask.EditTextCEL
            android:id="@+id/celular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/celular"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endereco"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/view2"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/cep_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/texto"
        android:orientation="horizontal">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50">

            <calendall.com.br.calendallpro.mask.EditTextCEP
                android:id="@+id/cep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cep"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50">

            <EditText
                android:id="@+id/numero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numero"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cep_numero">

        <EditText
            android:id="@+id/complemento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/complemento"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/texto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onde_atende"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/view5"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meu_local"
        android:id="@+id/meuLocal"
        android:layout_below="@+id/texto2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/domicilio"
        android:id="@+id/domicilio"
        android:layout_alignBottom="@+id/meuLocal"
        android:layout_toRightOf="@+id/texto2"
        android:layout_toEndOf="@+id/texto2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuar"
        android:id="@+id/button"
        android:onClick="onContinuar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
