<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.RegisterLoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <calendall.com.br.calendallpro.mask.EditTextCARTAO
            android:id="@+id/cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero_cartao"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_cartao"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/cep_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view2"
        android:orientation="horizontal">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50">

            <EditText
                android:id="@+id/cep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mes_vencimento"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50">

            <EditText
                android:id="@+id/numero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ano_vencimento"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cep_numero">

        <EditText
            android:id="@+id/complemento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/codigo_seguranca"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuar"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
