<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="calendall.com.br.calendallpro.view.LoginRegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forma_pagamento"
        android:textSize="35dp"
        android:textColor="@android:color/secondary_text_dark"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20px"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:text="@string/boleto"
            android:background="@drawable/button"
            android:onClick="onLogin"
            android:id="@+id/button2" />

        <android.support.v4.widget.Space
            android:layout_width="20px"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:text="@string/cartao"
            android:background="@drawable/button"
            android:onClick="onRegister"
            android:id="@+id/button3" />
    </LinearLayout>

</RelativeLayout>
